general bug fixes

--- a/Vocabulous/src/account-view.html
+++ b/Vocabulous/src/account-view.html
@@ -163,7 +163,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             opacity: 1;
         };
       }
-      paper-icon-button.user{
+      iron-icon.user{
         
         width: 150px;
         height: 150px;
@@ -177,7 +177,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     </style>
       <div class="card">
           <h1>Account</h1>
-          <paper-icon-button src="account-icon.png" class="user"></paper-icon-button>
+          <iron-icon src="account-icon.png" class="user"></iron-icon>
           <div class="app-grid">
                   <h2 class="name"></h2>
                   <h3 class="institution">HTL Leonding</h3>
