--- a/Vocabulous/src/messages-view.html
+++ b/Vocabulous/src/messages-view.html
@@ -26,6 +26,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
     <div class="card">
       <h1>Messages View</h1>
+      <p>Mit Hilfe dieser Funktion kann der Schüler/Student persönlich Kontakt mit dem Lerninstitut oder seinem Trainer aufnehmen.</p>
+      <p>Diese Funktion wird erst zum Schluss implementiert, da dies eine Nebenfunktion des Programmes ist.</p>
     </div>
   </template>
 
