--- a/Vocabulous/src/my-app.html
+++ b/Vocabulous/src/my-app.html
@@ -33,7 +33,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
 
 <link rel="lazy-import" href="home-view.html">
-<link rel="lazy-import" href="start-lesson.html">
+<link rel="lazy-import" href="unit-overview.html">
 <link rel="lazy-import" href="statistics-view.html">
 <link rel="lazy-import" href="messages-view.html">
 <link rel="lazy-import" href="account-view.html">
