--- a/Vocabulous/src/account-view.html
+++ b/Vocabulous/src/account-view.html
@@ -204,8 +204,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             </tr>
           </table>
                   <div class="buttons">
-                      <paper-button name="edit" raised>Edit</paper-button>
-                      <paper-button name="save" raised>Save</paper-button>
+                      <paper-button name="edit" raised noink>Edit</paper-button>
+                      <paper-button name="save" raised noink>Save</paper-button>
                   </div>
           
       </div>
