--- a/Vocabulous/src/settings-view.html
+++ b/Vocabulous/src/settings-view.html
@@ -267,40 +267,40 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           </tr>
           <tr>
               <td><h3 class="headerBackground">Background colour</h3></td>
-              <td><paper-swatch-picker class="headerBackground"></paper-swatch-picker></td>
+              <td><paper-swatch-picker class="headerBackground" noink></paper-swatch-picker></td>
               <td><h3 class="headerColor">Font colour</h3></td>
-              <td><paper-swatch-picker class="headerColor"></paper-swatch-picker></td>
+              <td><paper-swatch-picker class="headerColor" noink></paper-swatch-picker></td>
           </tr>
           <tr>
               <td><h3 class="menu">Menu</h3></td>
           </tr>
           <tr>
               <td><h3 class="menuBackground">Background color</h3></td>
-              <td><paper-swatch-picker class="menuBackground"></paper-swatch-picker></td>
+              <td><paper-swatch-picker class="menuBackground" noink></paper-swatch-picker></td>
               <td><h3 class="menuColor">Font colour</h3></td>
-              <td><paper-swatch-picker class="menuColor"></paper-swatch-picker></td>
+              <td><paper-swatch-picker class="menuColor" noink></paper-swatch-picker></td>
               <td><h3 class="menuNavigationColor">Navigation colour</h3></td>
-              <td><paper-swatch-picker class="menuNavigationColor"></paper-swatch-picker></td>
+              <td><paper-swatch-picker class="menuNavigationColor" noink></paper-swatch-picker></td>
           </tr>
           <tr>
             <td><h3 class="menuNavigationFontColor">Navigation Font colour</h3></td>
-            <td><paper-swatch-picker class="menuNavigationFontColor"></paper-swatch-picker></td>
+            <td><paper-swatch-picker class="menuNavigationFontColor" noink></paper-swatch-picker></td>
           </tr>
           <tr>
               <td><h3 class="displayArea">Card Area</h3></td>
           </tr>
           <tr>
               <td><h3 class="displayAreaBackground">Background colour</h3></td>
-              <td><paper-swatch-picker class="displayAreaBackground"></paper-swatch-picker></td>
+              <td><paper-swatch-picker class="displayAreaBackground" noink></paper-swatch-picker></td>
           </tr>
         </table>
     </div>
     <div class="buttons">
-        <paper-button name="edit" raised>Create new Theme</paper-button>
-        <paper-button name="work" raised style="display: none">Edit</paper-button>
-        <paper-button name="cancel" raised style="display: none">Cancel</paper-button>
-        <paper-button name="save" raised style="display: none">Save</paper-button>
-        <paper-button name="delete" raised style="display: none">Delete</paper-button>
+        <paper-button name="edit" raised noink>Create new Theme</paper-button>
+        <paper-button name="work" raised noink style="display: none">Edit</paper-button>
+        <paper-button name="cancel" raised noink style="display: none">Cancel</paper-button>
+        <paper-button name="save" raised noink style="display: none">Save</paper-button>
+        <paper-button name="delete" raised noink style="display: none">Delete</paper-button>
     </div>
   </div>
   </template>
