--- a/old/src/settings-view.html
+++ b/old/src/settings-view.html
@@ -256,7 +256,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           </td>
         </tr>
       </table>
-      <div class="createTheme">
+      <div class="createTheme" style="display: none">
         <h2 class="ownTheme">Create own theme</h2>
         <table>
           <tr>
@@ -297,10 +297,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     </div>
     <div class="buttons">
         <paper-button name="edit" raised>Create new Theme</paper-button>
-        <paper-button name="work" raised>Edit</paper-button>
-        <paper-button name="cancel" raised>Cancel</paper-button>
-        <paper-button name="save" raised>Save</paper-button>
-        <paper-button name="delete" raised>Delete</paper-button>
+        <paper-button name="work" raised style="display: none">Edit</paper-button>
+        <paper-button name="cancel" raised style="display: none">Cancel</paper-button>
+        <paper-button name="save" raised style="display: none">Save</paper-button>
+        <paper-button name="delete" raised style="display: none">Delete</paper-button>
     </div>
   </div>
   </template>
