--- a/old/src/statistics-view.html
+++ b/old/src/statistics-view.html
@@ -27,6 +27,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
     <div class="card">
       <h1>Statistics View</h1>
+      <p>Hier werden die Daten übersichtlich für den Schüler/Studenten dargestellt.</p>
     </div>
   </template>
 
