--- a/old/src/overview-page.html
+++ b/old/src/overview-page.html
@@ -222,6 +222,9 @@
       _getSettingsviewTag(){
         return Polymer.dom(this.root).querySelector("settings-view[name=settings-view]");
       }
+      _getUnitView(){
+        return Polymer.dom(this.root).querySelector("unit-overview[name=unit-overview]");
+      }
       _getAppHeader(){
         return Polymer.dom(this.root).querySelector("app-header");
       }
